--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore Firebase config to prevent exposing API keys
-firebaseConfig.js
+# Ignore Firebase config in Git but allow deployment
+/firebaseConfig.js
+!public/firebaseConfig.js  # Allow deployment inside "public" folder
 
 # Ignore Node modules and build files
 node_modules/
@@ -15,6 +16,10 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore Firebase debug logs
+firebase-debug.log
+firebase-debug.*
 
 # Ignore Git metadata
 .git/
