--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.10.0",
-    "square": "^17.1.0"
+    "@square/square": "^17.1.0"
   },
   "scripts": {
     "start": "node index.js"
