--- a/.env.txt
+++ b/.env.txt
@@ -1,3 +1,3 @@
-SQUARE_ACCESS_TOKEN=EAAAl2fPk73oOW5y3brJgQkeICaFS_tGz0w5NrFmyhciQ5E_m8GeUbdYw4gDw-wE
-SQUARE_LOCATION_ID=wbhk_6c592da7bfd5406fb23a8ec88d5fcc10
-SQUARE_WEBHOOK_SECRET=qiRDVMGGSiffo6QkQZTUiw
+SQUARE_ACCESS_TOKEN=XXX
+SQUARE_LOCATION_ID=XXX
+SQUARE_WEBHOOK_SECRET=XXX
