--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,39 @@
-# Ignore Firebase config in Git but allow deployment
-/firebaseConfig.js
-!public/firebaseConfig.js  # Allow deployment inside "public" folder
-
-# Ignore Node modules and build files
+# Ignore node_modules and dependencies
 node_modules/
-public/build/
-dist/
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Ignore system files
-.DS_Store
-Thumbs.db
+# Ignore environment variables and sensitive files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.*
+
+# Ignore build output
+.next/
+out/
+dist/
+.vercel/
 
 # Ignore logs
+logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs/**/*.log
 
-# Ignore Firebase debug logs
-firebase-debug.log
-firebase-debug.*
+# Ignore OS-specific and editor files
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
 
-# Ignore Git metadata
-.git/
-"firebase-adminsdk.json" 
+# Ignore Firebase and Square config files if not meant to be public
+firebase.json
+firestore.indexes.json
+firestore.rules
+
+# Ignore static exports
+/static/**
