--- a/functions/package.json
+++ b/functions/package.json
@@ -1,11 +1,16 @@
 {
   "name": "functions",
-  "main": "index.js",
+  "type": "commonjs",
   "engines": {
     "node": "20"
   },
+  "main": "index.js",
+  "scripts": {
+    "start": "firebase emulators:start --only functions",
+    "deploy": "firebase deploy --only functions"
+  },
   "dependencies": {
     "firebase-admin": "^11.11.1",
-    "firebase-functions": "^4.4.1"
+    "firebase-functions": "^4.9.0"
   }
 }
