--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,10 @@
       {
         "source": "/credits",
         "destination": "/credits.html"
+      },
+      {
+        "source": "/payment-success",
+        "destination": "/payment-success.html"
       }
     ]
   },
