--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase-admin": "^11.11.1",
-    "firebase-functions": "^4.9.0"
+    "firebase-functions": "^4.9.0",
+    "square": "^42.0.0"
   }
 }
