--- a/functions/package.json
+++ b/functions/package.json
@@ -1,17 +1,13 @@
 {
   "name": "functions",
+  "version": "1.0.0",
   "main": "index.js",
   "engines": {
     "node": "20"
   },
-  "scripts": {
-    "start": "firebase emulators:start --only functions",
-    "deploy": "firebase deploy --only functions"
-  },
   "dependencies": {
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^3.23.0",
-    "raw-body": "^3.0.0",
-    "square": "^42.0.0"
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.4.1",
+    "raw-body": "^2.5.2"
   }
 }
