--- a/functions/package.json
+++ b/functions/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1",
-    "raw-body": "^2.5.2"
+    "raw-body": "^2.5.2",
+    "square": "^42.0.0"
   }
 }
